# ZeroStack

./: DEV_GUIDE.md  README.md  docker-compose.yml  documents.db  package-lock.json  package.json  setup.ps1  start.bat  start.ps1
.github/workflows/: ci-cd.yml
hp_data_structures/: Cargo.toml
hp_data_structures/benches/: combinatorics_bench.rs  concurrent_hash_map_bench.rs  gpu_score_bench.rs  persistent_tree_bench.rs
hp_data_structures/src/: combinatorics.rs  concurrent_hash_map.rs  gpu_score.rs  lib.rs  persistent_tree.rs
hp_data_structures/src/shaders/: softmax.wgsl
hp_data_structures/tests/: combinatorics.rs  concurrent_hash_map.rs  persistent_tree.rs
hp_query_planner/: README.md  dune  query_planner.ml  query_planner.mli
k8s/: deployment.yaml  hpa.yaml  service.yaml
search_service/: Dockerfile  load_datasets.py  main.py  requirements.txt  test_upload.py
search_service/datasets/: wikipedia_sample.csv
search_service/ocaml_planner/: run_planner.sh
search_service/rust_ext/: Cargo.toml  lib.rs
terraform/: main.tf  outputs.tf  variables.tf
toy_kernel/: Makefile  kernel.cpp  linker.ld
toy_kernel/boot/: grub.cfg
zerostack-frontend/: package-lock.json  package.json
zerostack-frontend/src/: App.tsx
